just add proj's hrl to sync

--- a/sync.sample.config
+++ b/sync.sample.config
@@ -1,17 +1,17 @@
 %% vim: ts=4 sw=4 et ft=erlang
 [
-    {sync,[
+ {sync,[
 
         %% growl: Desktop notifications
         %% valid values: all | none | [success | warning | error]
         %% default: all
         {growl, all},
-        
+
         %% log: Console notifications
         %% valid values: all | none | [success | warnings | errors]
         %% default: all
         {log, all},    
-                       
+
         %% non_descendants: How to handle beams whose original source path is
         %% not a descendant of the current working directory.
         %%
@@ -41,8 +41,15 @@
         %% * notifu = The notifu program for Windows
         %% * emacsclient = Emacs notifications
         %% default: auto
-        {executable, auto}
-    ]}
+        {executable, auto},
+
+        %% just sync your own proj's src and header files
+        {src_dirs, {replace, [
+                              {"/opt/proj/src", [{outdir, "/opt/proj/ebin"}, {i, "/opt/proj/include"},
+                                                 debug_info]}
+                             ]}},
+        {hrl_dirs, ["/opt/proj/include"]}
+       ]}
 ].
 
 
